--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <h1>Welcome to new project </h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquid illo eos voluptatem quisquam ab. Optio illo odit a voluptatum. Possimus repellendus veritatis similique neque deleniti magnam inventore aut ullam.
         </p> 
+        <h2>paragraph 1 </h2>
         <button>click here</button>
     </body>
 </html>
