added extra para

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquid illo eos voluptatem quisquam ab. Optio illo odit a voluptatum. Possimus repellendus veritatis similique neque deleniti magnam inventore aut ullam.
         </p> 
         <h2>paragraph 1 </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est minima quia quis quasi, expedita nemo odit totam maxime optio sint delectus eum esse adipisci beatae ipsa nam voluptatem, architecto maiores.</p>
 <button>view here</button>
     </body>
 </html>
