--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquid illo eos voluptatem quisquam ab. Optio illo odit a voluptatum. Possimus repellendus veritatis similique neque deleniti magnam inventore aut ullam.
         </p> 
         <h2>paragraph 1 </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, officiis!</p>
 <button>view here</button>
     </body>
 </html>
